eggenberg-talos-cluster-1/argocd-apps-configuration/keycloak/keycloak-netpol.yaml
# Keycloak pods (operator labels: app=keycloak). Cilium identity "ingress" is
# the Gateway's Envoy; kubelet probes arrive as "host". 7800 is the JGroups
# cluster port between the two replicas; 9000 is the management/health port.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak-netpol
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/managed-by: keycloak-operator
  ingress:
    - fromEntities:
        - ingress
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: keycloak
            app.kubernetes.io/managed-by: keycloak-operator
      toPorts:
        - ports:
            - port: "7800"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: keycloak
            app.kubernetes.io/managed-by: keycloak-operator
      toPorts:
        - ports:
            - port: "7800"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak-postgres-netpol
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: keycloak-postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: keycloak
            app.kubernetes.io/managed-by: keycloak-operator
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - toEntities:
        - kube-apiserver
